Incorporate revisitSolver functions to DijkstraSolver. Add RT and RV visualizations

--- a/scr/notebook.ipynb
+++ b/scr/notebook.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Environment: conda python 3.7\n",
+    "# Environment: conda python 3.10\n",
     "\n",
     "from DijkstraSolver import DijkstraSolver, singleAccessibilitySolve\n",
     "from BasicSolver import BasicSolver\n",
@@ -33,7 +33,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7ebb53bcbb44a72ac261f945da12a84",
+       "model_id": "58c855cf356d4ac681aaa5f1ef7ea802",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,7 +55,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51f4b97d6f5547f5a8804f8767687549",
+       "model_id": "3cee3c96916b4af0b8b400f96e326fb5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -70,7 +70,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "------ Scheduled Timetable Routing Finished... ------\n"
+      "------ Scheduled Timetable Routing Finished... ------\n",
+      "------ Realizable Timetable Routing Running... ------\n",
+      "------ Realizable Timetable Routing Finished... ------\n"
      ]
     }
    ],
@@ -94,18 +96,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7fa8f1b1e12c48bcb634c172921f16c7",
+       "model_id": "12d1e88b96464592922ffae61f10a476",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/23 [00:00<?, ?it/s]"
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -114,7 +116,49 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be4aedd8f28f48a49aa3ac43e4b0c7ec",
+       "model_id": "5013d4cec5894c9eaba025e28390b064",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/24 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0e12f59e621d4c8f9582badc25301371",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/24 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c69a70913251460e93c0e119679e2244",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/24 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8f74e3eb94f344bca32cd25800fcfe92",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,80 +168,39 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'value', 'old': 30, 'new': 35, 'owner': IntSlider(value=35, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 35, 'new': 40, 'owner': IntSlider(value=40, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 40, 'new': 45, 'owner': IntSlider(value=45, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 45, 'new': 50, 'owner': IntSlider(value=50, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 50, 'new': 55, 'owner': IntSlider(value=55, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 55, 'new': 60, 'owner': IntSlider(value=60, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 60, 'new': 65, 'owner': IntSlider(value=65, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 65, 'new': 70, 'owner': IntSlider(value=70, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 70, 'new': 75, 'owner': IntSlider(value=75, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 75, 'new': 80, 'owner': IntSlider(value=80, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 80, 'new': 85, 'owner': IntSlider(value=85, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 85, 'new': 80, 'owner': IntSlider(value=80, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 80, 'new': 75, 'owner': IntSlider(value=75, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 75, 'new': 65, 'owner': IntSlider(value=65, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 65, 'new': 60, 'owner': IntSlider(value=60, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 60, 'new': 55, 'owner': IntSlider(value=55, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 55, 'new': 50, 'owner': IntSlider(value=50, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 50, 'new': 45, 'owner': IntSlider(value=45, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 45, 'new': 40, 'owner': IntSlider(value=40, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 40, 'new': 35, 'owner': IntSlider(value=35, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 35, 'new': 30, 'owner': IntSlider(value=30, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 30, 'new': 25, 'owner': IntSlider(value=25, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 25, 'new': 20, 'owner': IntSlider(value=20, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 20, 'new': 15, 'owner': IntSlider(value=15, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 15, 'new': 10, 'owner': IntSlider(value=10, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 10, 'new': 5, 'owner': IntSlider(value=5, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 5, 'new': 10, 'owner': IntSlider(value=10, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 10, 'new': 15, 'owner': IntSlider(value=15, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 15, 'new': 20, 'owner': IntSlider(value=20, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 20, 'new': 25, 'owner': IntSlider(value=25, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 25, 'new': 30, 'owner': IntSlider(value=30, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 30, 'new': 35, 'owner': IntSlider(value=35, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 35, 'new': 40, 'owner': IntSlider(value=40, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 40, 'new': 45, 'owner': IntSlider(value=45, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 45, 'new': 50, 'owner': IntSlider(value=50, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 50, 'new': 55, 'owner': IntSlider(value=55, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 55, 'new': 60, 'owner': IntSlider(value=60, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 60, 'new': 55, 'owner': IntSlider(value=55, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 55, 'new': 50, 'owner': IntSlider(value=50, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 50, 'new': 55, 'owner': IntSlider(value=55, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 55, 'new': 60, 'owner': IntSlider(value=60, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 60, 'new': 70, 'owner': IntSlider(value=70, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 70, 'new': 75, 'owner': IntSlider(value=75, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 75, 'new': 80, 'owner': IntSlider(value=80, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 80, 'new': 85, 'owner': IntSlider(value=85, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 85, 'new': 90, 'owner': IntSlider(value=90, max=120, min=5, step=5), 'type': 'change'}\n",
-      "{'name': 'value', 'old': 90, 'new': 95, 'owner': IntSlider(value=95, max=120, min=5, step=5), 'type': 'change'}\n"
-     ]
     }
    ],
    "source": [
     "# Produce buffers\n",
+    "from ipyleaflet import GeoJSON, Map\n",
+    "from ipywidgets import IntSlider\n",
     "from shapely.geometry import Point, mapping\n",
-    "import json\n",
+    "import json, sys\n",
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "from tqdm.notebook import tqdm\n",
-    "timeBudgetList = list(range(5,120,5))\n",
+    "timeBudgetList = list(range(5,121,5))\n",
+    "typeIDList = [\"SC\", \"RT\", \"RV\"]\n",
+    "colorList = [\"blue\", \"green\", \"orange\"]\n",
+    "colorDic = {}\n",
+    "\n",
+    "for index in range(len(typeIDList)):\n",
+    "    colorDic[typeIDList[index]] = colorList[index]\n",
     "\n",
     "columnsHead = [\"lat\", \"lon\"]\n",
-    "for timeBudget in timeBudgetList:\n",
-    "    columnsHead.append(\"R_\" + str(timeBudget))\n",
+    "for typeID in typeIDList:\n",
+    "    for timeBudget in timeBudgetList:\n",
+    "        columnsHead.append(typeID + \"_\" + str(timeBudget))\n",
     "\n",
     "parameterList = []\n",
     "for receivingStopID, ODRecord in (results.items()):\n",
     "    insertRecord = [float(ODRecord[\"stop_lat\"]), float(ODRecord[\"stop_lon\"])]\n",
-    "    for timeBudget in timeBudgetList: \n",
-    "        radius = int(max(min((timeBudget * 60 - ODRecord[\"timeSC\"]) * walkingSpeed, walkingDistanceLimit), 0))\n",
-    "        insertRecord.append(radius)\n",
+    "    for typeID in typeIDList:\n",
+    "        for timeBudget in timeBudgetList:\n",
+    "            if ODRecord[\"time\" + typeID] == None:\n",
+    "                ODRecord[\"time\" + typeID] = sys.maxsize\n",
+    "            radius = int(max(min((timeBudget * 60 - ODRecord[\"time\" + typeID]) * walkingSpeed, walkingDistanceLimit), 0))\n",
+    "            insertRecord.append(radius)\n",
     "    parameterList.append(insertRecord)\n",
     "\n",
     "geojsonList = {}\n",
@@ -206,16 +209,21 @@
     "df = df.drop(['lon', 'lat'], axis=1)\n",
     "gdf = gpd.GeoDataFrame(df, crs=\"EPSG:4326\", geometry=geometry)\n",
     "gdf_p = gdf.to_crs(\"EPSG:32123\")\n",
-    "for timeBudget in tqdm(timeBudgetList):\n",
-    "    buffers = gdf_p.buffer(distance=df[\"R_\" + str(timeBudget)])\n",
-    "    buffers_p = buffers.to_crs(\"EPSG:4326\")\n",
-    "    buffer_gdf = gpd.GeoDataFrame(geometry=buffers_p)\n",
-    "    buffer_gdf = buffer_gdf.dissolve()\n",
-    "    geo_json = json.loads(buffer_gdf.to_json())\n",
-    "    geojsonLayer = GeoJSON(\n",
-    "        data=geo_json\n",
-    "    )\n",
-    "    geojsonList[\"R_\" + str(timeBudget)] = geojsonLayer\n",
+    "for typeID in tqdm(typeIDList, position =0):\n",
+    "    for timeBudget in tqdm(timeBudgetList, position = 1):\n",
+    "        buffers = gdf_p.buffer(distance=df[typeID + \"_\" + str(timeBudget)])\n",
+    "        buffers_p = buffers.to_crs(\"EPSG:4326\")\n",
+    "        buffer_gdf = gpd.GeoDataFrame(geometry=buffers_p)\n",
+    "        buffer_gdf = buffer_gdf.dissolve()\n",
+    "        geo_json = json.loads(buffer_gdf.to_json())\n",
+    "        \n",
+    "        geojsonLayer = GeoJSON(\n",
+    "            data=geo_json,\n",
+    "            style={\n",
+    "                \"opacity\": 1, \"color\": colorDic[typeID], \"fillOpacity\": 0.1, \"fillColor\": colorDic[typeID]\n",
+    "            }\n",
+    "        )\n",
+    "        geojsonList[typeID + \"_\" + str(timeBudget)] = geojsonLayer\n",
     "\n",
     "# Visualizae PPA\n",
     "from ipyleaflet import Map, basemaps, Circle, WidgetControl, GeoJSON, LayerGroup\n",
@@ -224,16 +232,20 @@
     "defaultTimeBudget = 30\n",
     "timeBudgetBackup = defaultTimeBudget\n",
     "\n",
-    "m = Map(basemap=basemaps.OpenStreetMap.Mapnik, center=(39.963596, -83.000944), zoom=11)\n",
-    "slider = IntSlider(min=5, max=120, step=5, value=defaultTimeBudget, continuous_update=True)\n",
-    "slider.observe(onChange, names='value')\n",
-    "m.add_layer(geojsonList[\"R_\" + str(defaultTimeBudget)])\n",
-    "\n",
     "def onChange(e):\n",
     "    timeBudget = int(e[\"new\"])\n",
     "    oldTimeBudget = int(e[\"old\"])\n",
-    "    m.remove_layer(geojsonList[\"R_\" + str(oldTimeBudget)])\n",
-    "    m.add_layer(geojsonList[\"R_\" + str(timeBudget)])\n",
+    "    for typeID in typeIDList:\n",
+    "        m.add_layer(geojsonList[typeID + \"_\" + str(timeBudget)])\n",
+    "        m.remove_layer(geojsonList[typeID + \"_\" + str(oldTimeBudget)])\n",
+    "        \n",
+    "m = Map(basemap=basemaps.OpenStreetMap.Mapnik, center=(39.963596, -83.000944), zoom=11)\n",
+    "slider = IntSlider(min=5, max=120, step=5, value=defaultTimeBudget, continuous_update=True)\n",
+    "slider.observe(onChange, names='value')\n",
+    "\n",
+    "for typeID in typeIDList:\n",
+    "    m.add_layer(geojsonList[typeID + \"_\" + str(defaultTimeBudget)])\n",
+    "\n",
     "\n",
     "\n",
     "widget_control1 = WidgetControl(widget=slider, position='topright')\n",
