--- a/scr/notebook.ipynb
+++ b/scr/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76e0ca2efb8044dd884b4cfcd9620f21",
+       "model_id": "552ba25682ec4d82af8b2c1fabade9ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,7 +55,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53ec2705243c4773ae1d3107e33ce26d",
+       "model_id": "2de571b1ffa8454d98993df24dcfea70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -96,13 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d0d1972efc44ba19e220d99b36f6b4b",
+       "model_id": "149227cbd1ae4f3896afa4affcc7e0d5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -116,7 +116,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "858b0c2e77ca44aa833d90dae6ede106",
+       "model_id": "3c4aaf79b01f419d9aac598d200a8d9c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,7 +130,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2c053bbd02d422a9bab14403c31ac0f",
+       "model_id": "b05cf18b9a2c421c9c87a8d2eb1eda41",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,7 +144,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64768920f9414646bc7515c292503fe8",
+       "model_id": "90ebd74e556d4dfd8f46e47de469b6a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,7 +158,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ce365bdfb3349428971cd90c4a6bd62",
+       "model_id": "aa2b65058fce4edfb7a8b58d1083fed8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -181,6 +181,11 @@
     "from tqdm.notebook import tqdm\n",
     "timeBudgetList = list(range(5,121,5))\n",
     "typeIDList = [\"SC\", \"RT\", \"RV\"]\n",
+    "typeIDMeaningDic = {\n",
+    "    \"SC\": \"scheduled\",\n",
+    "    \"RT\": \"retrospective\",\n",
+    "    \"RV\": \"realizable\"\n",
+    "}\n",
     "colorList = [\"blue\", \"green\", \"orange\"]\n",
     "colorDic = {}\n",
     "\n",
@@ -203,6 +208,7 @@
     "            insertRecord.append(radius)\n",
     "    parameterList.append(insertRecord)\n",
     "\n",
+    "GDFList = {}\n",
     "geojsonList = {}\n",
     "df = pd.DataFrame(parameterList, columns = columnsHead)\n",
     "geometry = [Point(xy) for xy in zip(df.lon, df.lat)]\n",
@@ -215,6 +221,7 @@
     "        buffers_p = buffers.to_crs(\"EPSG:4326\")\n",
     "        buffer_gdf = gpd.GeoDataFrame(geometry=buffers_p)\n",
     "        buffer_gdf = buffer_gdf.dissolve()\n",
+    "        GDFList[typeID + \"_\" + str(timeBudget)] = buffer_gdf\n",
     "        geo_json = json.loads(buffer_gdf.to_json())\n",
     "        \n",
     "        geojsonLayer = GeoJSON(\n",
@@ -226,7 +233,7 @@
     "        geojsonList[typeID + \"_\" + str(timeBudget)] = geojsonLayer\n",
     "\n",
     "# Visualizae PPA\n",
-    "from ipyleaflet import Map, basemaps, Circle, WidgetControl, GeoJSON, LayerGroup\n",
+    "from ipyleaflet import Map, basemaps, Circle, WidgetControl, GeoJSON, LayerGroup, GeoData\n",
     "from ipywidgets import IntSlider, ColorPicker, jslink\n",
     "\n",
     "defaultTimeBudget = 30\n",
@@ -256,10 +263,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6f43f42900e347c1ae253c18a26cca0b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/24 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For 5 minutes of time budget,\n",
+      "    1681 jobs are accessible, which is 2.76% of all Columbus jobs in the scheduled scenario.\n",
+      "    1678 jobs are accessible, which is 2.76% of all Columbus jobs in the retrospective scenario.\n",
+      "    1678 jobs are accessible, which is 2.76% of all Columbus jobs in the realizable scenario.\n",
+      "For 10 minutes of time budget,\n",
+      "    3420 jobs are accessible, which is 5.62% of all Columbus jobs in the scheduled scenario.\n",
+      "    3541 jobs are accessible, which is 5.82% of all Columbus jobs in the retrospective scenario.\n",
+      "    3009 jobs are accessible, which is 4.95% of all Columbus jobs in the realizable scenario.\n",
+      "For 15 minutes of time budget,\n",
+      "    5539 jobs are accessible, which is 9.11% of all Columbus jobs in the scheduled scenario.\n",
+      "    5993 jobs are accessible, which is 9.85% of all Columbus jobs in the retrospective scenario.\n",
+      "    4813 jobs are accessible, which is 7.91% of all Columbus jobs in the realizable scenario.\n",
+      "For 20 minutes of time budget,\n",
+      "    8347 jobs are accessible, which is 13.73% of all Columbus jobs in the scheduled scenario.\n",
+      "    8047 jobs are accessible, which is 13.23% of all Columbus jobs in the retrospective scenario.\n",
+      "    6297 jobs are accessible, which is 10.35% of all Columbus jobs in the realizable scenario.\n",
+      "For 25 minutes of time budget,\n",
+      "    10882 jobs are accessible, which is 17.9% of all Columbus jobs in the scheduled scenario.\n",
+      "    13113 jobs are accessible, which is 21.57% of all Columbus jobs in the retrospective scenario.\n",
+      "    8604 jobs are accessible, which is 14.15% of all Columbus jobs in the realizable scenario.\n",
+      "For 30 minutes of time budget,\n",
+      "    15479 jobs are accessible, which is 25.46% of all Columbus jobs in the scheduled scenario.\n",
+      "    16922 jobs are accessible, which is 27.83% of all Columbus jobs in the retrospective scenario.\n",
+      "    10638 jobs are accessible, which is 17.5% of all Columbus jobs in the realizable scenario.\n",
+      "For 35 minutes of time budget,\n",
+      "    18446 jobs are accessible, which is 30.34% of all Columbus jobs in the scheduled scenario.\n",
+      "    19649 jobs are accessible, which is 32.32% of all Columbus jobs in the retrospective scenario.\n",
+      "    14200 jobs are accessible, which is 23.36% of all Columbus jobs in the realizable scenario.\n",
+      "For 40 minutes of time budget,\n",
+      "    21721 jobs are accessible, which is 35.73% of all Columbus jobs in the scheduled scenario.\n",
+      "    23085 jobs are accessible, which is 37.97% of all Columbus jobs in the retrospective scenario.\n",
+      "    16018 jobs are accessible, which is 26.35% of all Columbus jobs in the realizable scenario.\n",
+      "For 45 minutes of time budget,\n",
+      "    25226 jobs are accessible, which is 41.5% of all Columbus jobs in the scheduled scenario.\n",
+      "    26636 jobs are accessible, which is 43.82% of all Columbus jobs in the retrospective scenario.\n",
+      "    18067 jobs are accessible, which is 29.72% of all Columbus jobs in the realizable scenario.\n",
+      "For 50 minutes of time budget,\n",
+      "    28658 jobs are accessible, which is 47.14% of all Columbus jobs in the scheduled scenario.\n",
+      "    29702 jobs are accessible, which is 48.86% of all Columbus jobs in the retrospective scenario.\n",
+      "    20935 jobs are accessible, which is 34.44% of all Columbus jobs in the realizable scenario.\n",
+      "For 55 minutes of time budget,\n",
+      "    31811 jobs are accessible, which is 52.33% of all Columbus jobs in the scheduled scenario.\n",
+      "    32417 jobs are accessible, which is 53.33% of all Columbus jobs in the retrospective scenario.\n",
+      "    22682 jobs are accessible, which is 37.31% of all Columbus jobs in the realizable scenario.\n",
+      "For 60 minutes of time budget,\n",
+      "    35706 jobs are accessible, which is 58.74% of all Columbus jobs in the scheduled scenario.\n",
+      "    35088 jobs are accessible, which is 57.72% of all Columbus jobs in the retrospective scenario.\n",
+      "    24000 jobs are accessible, which is 39.48% of all Columbus jobs in the realizable scenario.\n",
+      "For 65 minutes of time budget,\n",
+      "    39784 jobs are accessible, which is 65.45% of all Columbus jobs in the scheduled scenario.\n",
+      "    37848 jobs are accessible, which is 62.26% of all Columbus jobs in the retrospective scenario.\n",
+      "    25631 jobs are accessible, which is 42.16% of all Columbus jobs in the realizable scenario.\n",
+      "For 70 minutes of time budget,\n",
+      "    42141 jobs are accessible, which is 69.32% of all Columbus jobs in the scheduled scenario.\n",
+      "    40084 jobs are accessible, which is 65.94% of all Columbus jobs in the retrospective scenario.\n",
+      "    26949 jobs are accessible, which is 44.33% of all Columbus jobs in the realizable scenario.\n",
+      "For 75 minutes of time budget,\n",
+      "    43297 jobs are accessible, which is 71.23% of all Columbus jobs in the scheduled scenario.\n",
+      "    41725 jobs are accessible, which is 68.64% of all Columbus jobs in the retrospective scenario.\n",
+      "    28558 jobs are accessible, which is 46.98% of all Columbus jobs in the realizable scenario.\n",
+      "For 80 minutes of time budget,\n",
+      "    44372 jobs are accessible, which is 72.99% of all Columbus jobs in the scheduled scenario.\n",
+      "    43335 jobs are accessible, which is 71.29% of all Columbus jobs in the retrospective scenario.\n",
+      "    30450 jobs are accessible, which is 50.09% of all Columbus jobs in the realizable scenario.\n",
+      "For 85 minutes of time budget,\n",
+      "    45031 jobs are accessible, which is 74.08% of all Columbus jobs in the scheduled scenario.\n",
+      "    44797 jobs are accessible, which is 73.69% of all Columbus jobs in the retrospective scenario.\n",
+      "    32624 jobs are accessible, which is 53.67% of all Columbus jobs in the realizable scenario.\n",
+      "For 90 minutes of time budget,\n",
+      "    45556 jobs are accessible, which is 74.94% of all Columbus jobs in the scheduled scenario.\n",
+      "    45466 jobs are accessible, which is 74.79% of all Columbus jobs in the retrospective scenario.\n",
+      "    34887 jobs are accessible, which is 57.39% of all Columbus jobs in the realizable scenario.\n",
+      "For 95 minutes of time budget,\n",
+      "    45849 jobs are accessible, which is 75.42% of all Columbus jobs in the scheduled scenario.\n",
+      "    45778 jobs are accessible, which is 75.31% of all Columbus jobs in the retrospective scenario.\n",
+      "    36957 jobs are accessible, which is 60.8% of all Columbus jobs in the realizable scenario.\n",
+      "For 100 minutes of time budget,\n",
+      "    46016 jobs are accessible, which is 75.7% of all Columbus jobs in the scheduled scenario.\n",
+      "    45825 jobs are accessible, which is 75.38% of all Columbus jobs in the retrospective scenario.\n",
+      "    38455 jobs are accessible, which is 63.26% of all Columbus jobs in the realizable scenario.\n",
+      "For 105 minutes of time budget,\n",
+      "    46502 jobs are accessible, which is 76.5% of all Columbus jobs in the scheduled scenario.\n",
+      "    45877 jobs are accessible, which is 75.47% of all Columbus jobs in the retrospective scenario.\n",
+      "    39391 jobs are accessible, which is 64.8% of all Columbus jobs in the realizable scenario.\n",
+      "For 110 minutes of time budget,\n",
+      "    46777 jobs are accessible, which is 76.95% of all Columbus jobs in the scheduled scenario.\n",
+      "    46101 jobs are accessible, which is 75.84% of all Columbus jobs in the retrospective scenario.\n",
+      "    39876 jobs are accessible, which is 65.6% of all Columbus jobs in the realizable scenario.\n",
+      "For 115 minutes of time budget,\n",
+      "    47145 jobs are accessible, which is 77.56% of all Columbus jobs in the scheduled scenario.\n",
+      "    46485 jobs are accessible, which is 76.47% of all Columbus jobs in the retrospective scenario.\n",
+      "    40176 jobs are accessible, which is 66.09% of all Columbus jobs in the realizable scenario.\n",
+      "For 120 minutes of time budget,\n",
+      "    47618 jobs are accessible, which is 78.33% of all Columbus jobs in the scheduled scenario.\n",
+      "    46927 jobs are accessible, which is 77.2% of all Columbus jobs in the retrospective scenario.\n",
+      "    40615 jobs are accessible, which is 66.81% of all Columbus jobs in the realizable scenario.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Overlay analysis\n",
+    "jobsGDF = gpd.read_file(r\"D:\\CURA\\GRA\\ACCESS\\POIs\\columbus_jobs.gpkg\", layer='Jobs')\n",
+    "jobsGDFList = []\n",
+    "jobsTotalNumber = len(jobsGDF)\n",
+    "typeIDMeaningDic = {\n",
+    "    \"SC\": \"scheduled\",\n",
+    "    \"RT\": \"retrospective\",\n",
+    "    \"RV\": \"realizable\"\n",
+    "}\n",
+    "for timeBudget in tqdm(timeBudgetList, position=0, leave=True):\n",
+    "    print(\"For \" + str(timeBudget) + \" minutes of time budget,\")\n",
+    "    for typeID in typeIDList:\n",
+    "        jobsJoinedGDF = gpd.sjoin(jobsGDF, GDFList[typeID + \"_\" + str(timeBudget)], how=\"inner\", op='intersects')\n",
+    "        jobsNumber = len(jobsJoinedGDF)\n",
+    "        print(\"    \" +  str(jobsNumber) + \" jobs are accessible, which is \" + str(int(jobsNumber/jobsTotalNumber*10000)/100) +\"% of all Columbus jobs in the \" + typeIDMeaningDic[typeID] + \" scenario.\")\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
