--- a/scr/notebook.ipynb
+++ b/scr/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "552ba25682ec4d82af8b2c1fabade9ea",
+       "model_id": "19c8cd2ef47e40feb78b084d53dba8d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,7 +55,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2de571b1ffa8454d98993df24dcfea70",
+       "model_id": "4886e40b619d4276b443ded3cbccfa9c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -96,13 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "149227cbd1ae4f3896afa4affcc7e0d5",
+       "model_id": "2f492e36fe0c4ba9b6531f24a59c7fe7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -116,7 +116,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c4aaf79b01f419d9aac598d200a8d9c",
+       "model_id": "49aa648444a64b5383ce8d8c55556be4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,7 +130,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b05cf18b9a2c421c9c87a8d2eb1eda41",
+       "model_id": "003ef222126745ec98a38c807e315121",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,7 +144,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90ebd74e556d4dfd8f46e47de469b6a8",
+       "model_id": "719b05ef04984b8e8539670021ae5dbf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,7 +158,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa2b65058fce4edfb7a8b58d1083fed8",
+       "model_id": "b504f68a801e4b6a8992ce27c69e4806",
        "version_major": 2,
        "version_minor": 0
       },
@@ -259,6 +259,30 @@
     "m.add_control(widget_control1)\n",
     "\n",
     "m\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    5.182659e+08\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "buffers = gdf_p.buffer(distance=df[\"SC\" + \"_120\"])\n",
+    "buffer_gdf = gpd.GeoDataFrame(geometry=buffers)\n",
+    "buffer_gdf = buffer_gdf.dissolve()\n",
+    "buffer_gdf.area"
    ]
   },
   {
