Test online database

--- a/scr/notebook.ipynb
+++ b/scr/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19c8cd2ef47e40feb78b084d53dba8d8",
+       "model_id": "546ee8c4f28845be986cfbf89766929d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,7 +55,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4886e40b619d4276b443ded3cbccfa9c",
+       "model_id": "9680a8a345be4d67a74f5d544cac40de",
        "version_major": 2,
        "version_minor": 0
       },
@@ -96,13 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f492e36fe0c4ba9b6531f24a59c7fe7",
+       "model_id": "545446cc33b940c89c5df1e520a37192",
        "version_major": 2,
        "version_minor": 0
       },
@@ -116,7 +116,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49aa648444a64b5383ce8d8c55556be4",
+       "model_id": "d4210845d2c54700b8242ddce1ba3c6c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,7 +130,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "003ef222126745ec98a38c807e315121",
+       "model_id": "103452523c97485aa9f0719a11625b55",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,7 +144,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "719b05ef04984b8e8539670021ae5dbf",
+       "model_id": "e0ea91a2a2444d5c9d50d0049fde507d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,7 +158,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b504f68a801e4b6a8992ce27c69e4806",
+       "model_id": "c65826e3d09a4088a2854d39aa95db69",
        "version_major": 2,
        "version_minor": 0
       },
@@ -172,6 +172,7 @@
    ],
    "source": [
     "# Produce buffers\n",
+    "location = r\"D:\\CURA\\GRA\\ACCESS\\data\"\n",
     "from ipyleaflet import GeoJSON, Map\n",
     "from ipywidgets import IntSlider\n",
     "from shapely.geometry import Point, mapping\n",
@@ -231,6 +232,8 @@
     "            }\n",
     "        )\n",
     "        geojsonList[typeID + \"_\" + str(timeBudget)] = geojsonLayer\n",
+    "        buffer_gdf.to_file(location + \"\\\\PPA_\" + typeIDMeaningDic[typeID] + \"_\" + str(timeBudget) + \".gpkg\", driver=\"GPKG\")\n",
+    "#         buffer_gdf.to_file(location + \"\\\\PPA_\" + typeIDMeaningDic[typeID] + \"_\" + str(timeBudget) + \".json\", driver=\"GeoJSON\")\n",
     "\n",
     "# Visualizae PPA\n",
     "from ipyleaflet import Map, basemaps, Circle, WidgetControl, GeoJSON, LayerGroup, GeoData\n",
@@ -424,6 +427,33 @@
     "        jobsNumber = len(jobsJoinedGDF)\n",
     "        print(\"    \" +  str(jobsNumber) + \" jobs are accessible, which is \" + str(int(jobsNumber/jobsTotalNumber*10000)/100) +\"% of all Columbus jobs in the \" + typeIDMeaningDic[typeID] + \" scenario.\")\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertOneResult at 0x2ac7e9a2140>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "client = MongoClient('mongodb+srv://test:test1234@cluster0.4iz06.mongodb.net/myFirstDatabase')\n",
+    "col = client.test[\"test\"]\n",
+    "testInsert = {\n",
+    "    \"test\": 1,\n",
+    "    \"test2\": 2\n",
+    "}\n",
+    "col.insert_one(testInsert)"
    ]
   },
   {
